--- a/app/src/main/res/layout/activity_depense.xml
+++ b/app/src/main/res/layout/activity_depense.xml
@@ -89,7 +89,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="€"
+                        android:text="@string/monnaie"
                         android:id="@+id/textView7"
                         android:textSize="12pt"
                         android:layout_gravity="bottom" />
