--- a/app/src/main/res/layout/activity_rembourser.xml
+++ b/app/src/main/res/layout/activity_rembourser.xml
@@ -83,7 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="€"
+                android:text="@string/monnaie"
                 android:textSize="30dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
