--- a/app/src/main/res/layout/item_element.xml
+++ b/app/src/main/res/layout/item_element.xml
@@ -49,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="€"
+                    android:text="@string/monnaie"
                     android:layout_marginTop="25dp"
                     android:id="@+id/textView4" />
 
