--- a/app/src/main/res/layout/item_element2.xml
+++ b/app/src/main/res/layout/item_element2.xml
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="€"
+                    android:text="@string/monnaie"
                     android:textSize="25dp"
                     android:id="@+id/textView"
                     android:layout_marginTop="10dp" />
